# service-daemon-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: -------bug-report.md  -------feature-request.md
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  future_interceptor_middleware.md
docs/architecture/: causal-tracing.md  internal-overview.md  lifecycle-management.md  macros-deep-dive.md  performance-benchmarks.md
docs/contribute/: framework.md  main.md
docs/development/: contributing.md  extending-framework.md
docs/guide/: diagnostics.md  get-started.md  interceptor-middleware.md  pitfalls-faq.md  provider-best-practices.md  resilience.md  state-management.md  testing-troubleshooting.md  triggers.md
docs/guide/tutorial/: advanced-macros.md  art-of-recovery.md  diy-providers.md  error-handling.md  grand-tour.md  hello-heartbeat.md  interceptor-gauntlet.md  (+12 more)
examples/complete/: Cargo.toml
examples/complete/src/: lib.rs  main.rs
examples/complete/src/providers/: fn_providers.rs  mod.rs  typed_providers.rs
examples/complete/src/services/: lifecycle.rs  mod.rs
examples/complete/tests/: complete_integration.rs
examples/demo/: Cargo.toml
examples/demo/src/: integration_tests.rs  main.rs
examples/demo/src/providers/: mod.rs  typed_providers.rs
examples/demo/src/services/: example.rs
examples/demo/src/triggers/: example.rs
examples/diagnostics/: Cargo.toml
examples/logging/: Cargo.toml
examples/logging/src/: lib.rs  main.rs  services.rs
examples/logging/tests/: logging_integration.rs
examples/macro-tests/: Cargo.toml
examples/macro-tests/src/: main.rs
examples/macro-tests/tests/: macro_compile_tests.rs
examples/macro-tests/tests/fail/: 01_service_bare_param.rs  01_service_bare_param.stderr  02_service_rejects_payload.rs  02_service_rejects_payload.stderr  03_service_unknown_attr.rs  03_service_unknown_attr.stderr  04_provider_on_enum.rs  04_provider_on_enum.stderr  05_provider_fn_no_return.rs  05_provider_fn_no_return.stderr  05_provider_unknown_template.rs  05_provider_unknown_template.stderr  06_provider_fn_bare_param.rs  06_provider_fn_bare_param.stderr  07_provider_fn_self_param.rs  07_provider_fn_self_param.stderr  08_trigger_multiple_payloads.rs  08_trigger_multiple_payloads.stderr  09_trigger_payload_plus_dependency_hint.rs  09_trigger_payload_plus_dependency_hint.stderr  10_service_explicit_payload_attr.rs  10_service_explicit_payload_attr.stderr  11_only_provided_cannot_inject_managed.rs  11_only_provided_cannot_inject_managed.stderr  12_non_watchable_provider_cannot_watch.rs  12_non_watchable_provider_cannot_watch.stderr  13_service_private_not_visible_to_sibling.rs  13_service_private_not_visible_to_sibling.stderr  14_service_invalid_scheduling.rs  14_service_invalid_scheduling.stderr
examples/macro-tests/tests/pass/: 01_basic_service.rs  02_service_with_priority_and_tags.rs  03_provider_with_defaults.rs  04_provider_struct_with_deps.rs  05_allow_sync_service.rs  06_trigger_templates.rs  07_provider_rwlock_mutex_injection.rs  08_provider_queue_with_capacity.rs  09_provider_env_syntax.rs  10_provider_env_int_type.rs  11_provider_env_only_string.rs  12_provider_fn_with_deps.rs  13_provider_queue_default_type.rs  14_provider_sync_fn.rs  15_provider_queue_with_bqueue_alias.rs  16_provider_full_capabilities.rs  17_service_visibility_super.rs  18_trigger_visibility_super.rs  19_service_visibility_in_self_path.rs  20_service_visibility_in_super_path.rs  21_service_scheduling.rs
examples/memory-analysis/: Cargo.toml  README.md
examples/memory-analysis/src/: lib.rs  main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs  providers.rs  services.rs
examples/minimal/tests/: minimal_integration.rs
examples/scheduling/: Cargo.toml
examples/scheduling/src/: main.rs
examples/scheduling/src/services/: admin.rs  mod.rs  modbus.rs
examples/simulation/: Cargo.toml
examples/simulation/src/: lib.rs  main.rs
examples/simulation/tests/: simulation_integration.rs
examples/stress/: Cargo.toml
examples/stress/src/: batch_0.rs  batch_0h.rs  batch_1.rs  batch_1h.rs  batch_2.rs  batch_3.rs  batch_4.rs  batch_5.rs  batch_6.rs  batch_7.rs  batch_8.rs  batch_9.rs  lib.rs  main.rs
examples/triggers/: Cargo.toml
examples/triggers/src/: lib.rs  main.rs  providers.rs  services.rs  trigger_handlers.rs
examples/triggers/tests/: elastic_scaling_pressure.rs  trigger_integration.rs
service-daemon/: Cargo.toml
service-daemon-macro/: Cargo.toml
service-daemon-macro/src/: allow_sync.rs  common.rs  lib.rs  provider.rs  service.rs  trigger.rs
service-daemon-macro/src/provider/: mod.rs  parser.rs  struct_gen.rs  templates.rs
service-daemon-macro/src/service/: codegen.rs  mod.rs  parser.rs
service-daemon-macro/src/trigger/: codegen.rs  mod.rs  parser.rs
service-daemon/src/: lib.rs  tutorial.rs
service-daemon/src/core/: di.rs  logging.rs  managed_state.rs  mod.rs  provider_init.rs  topology_collector.rs  trigger_runner.rs  triggers.rs
service-daemon/src/core/context/: api.rs  identity.rs  mod.rs  simulation.rs
service-daemon/src/core/service_daemon/: mod.rs  parts.rs  policy.rs  runner.rs
service-daemon/src/models/: error.rs  mod.rs  mutability.rs  policy.rs  provider_error.rs  service.rs  trigger.rs
service-daemon/src/utils/: context.rs  di.rs  logging.rs  managed_state.rs  mod.rs  service_daemon.rs  triggers.rs
service-daemon/src/utils/service_daemon/: mod.rs  policy.rs  runner.rs
service-daemon/tests/: eager_integration_tests.rs  lazy_fatal_integration_tests.rs  listen_strategy_tests.rs  livelock_regression.rs  normal_exit_restart_tests.rs  reload_integration_tests.rs  scheduling_integration.rs  trigger_verification_tests.rs  wave_timeout_tests.rs
src/: integration_tests.rs  main.rs
src/providers/: config.rs  mod.rs  trigger_providers.rs  typed_providers.rs
src/services/: example.rs
src/triggers/: example.rs
tests/: declarative_trigger_tests.rs  sync_support_tests.rs  watch_trigger_tests.rs
(+3 files in other folders)
