[package]
name = "service-daemon-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "service-daemon-rs"
path = "src/main.rs"

[features]
default = []
macros = []

[dependencies]
service-daemon = { path = "service-daemon" }
service-daemon-macro = { path = "service-daemon-macro" }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"

[workspace]
members = [".", "service-daemon", "service-daemon-macro"]
resolver = "2"
