[workspace]
members = [
    "service-daemon",
    "service-daemon-macro",
    "examples/minimal",
    "examples/complete",
    "examples/triggers",
    "examples/logging",
    "examples/simulation",
    "examples/macro-tests",
    "examples/stress",
    "examples/memory-analysis",
    "examples/diagnostics",
]
resolver = "2"
