[package]
name = "service-daemon-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for service-daemon-rs."
license = "MIT"
repository = "https://github.com/loft-games/service-daemon-rs"
keywords = ["daemon", "service", "dependency-injection", "proc-macro"]
categories = ["asynchronous", "development-tools::procedural-macros"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error2 = "2.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
