[package]
name = "service-daemon-macro"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "Declarative macros for the service-daemon orchestration framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/loft-games/service-daemon-rs"
keywords = ["daemon", "service", "dependency-injection", "proc-macro"]
categories = ["asynchronous", "development-tools::procedural-macro-helpers"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error2 = "2.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
