[package]
name = "service-daemon"
version = "0.1.0"
edition = "2024"
description = "A Rust library for automatic service management and dependency injection."
license = "MIT"
repository = "https://github.com/loft-games/service-daemon-rs"
keywords = ["daemon", "service", "dependency-injection", "tokio"]
categories = ["asynchronous", "rust-patterns"]

[features]
default = ["cron", "uuid-trigger-ids"]
macros = []
# Enable cron-based triggers (uses tokio-cron-scheduler)
cron = ["dep:tokio-cron-scheduler"]
# Enable UUID-based trigger IDs (uses uuid crate)
uuid-trigger-ids = ["dep:uuid"]

[dependencies]
service-daemon-macro = { path = "../service-daemon-macro" }
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-cron-scheduler = { version = "0.13", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
linkme = "0.3"
uuid = { version = "1.0", features = ["v4"], optional = true }
tokio-util = "0.7"
rand = "0.8"
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
