[package]
name = "service-daemon"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "A sophisticated Rust framework for automatic service management, event-driven triggers, and compile-time dependency injection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/loft-games/service-daemon-rs"
keywords = ["daemon", "service", "dependency-injection", "tokio"]
categories = ["asynchronous", "rust-patterns"]
readme = "../README.md"

[features]
default = ["cron", "uuid-trigger-ids"]
macros = []
# Enable cron-based triggers (uses tokio-cron-scheduler)
cron = ["dep:tokio-cron-scheduler"]
# Enable UUID-based trigger IDs (uses uuid crate)
uuid-trigger-ids = ["dep:uuid"]
# Enable simulation/testing support (MockContext, SimulationOverlay, log drain).
# This feature gates all debugging utilities to guarantee zero overhead in production.
simulation = []
# Enable file-based log persistence with rotation (uses tracing-appender)
file-logging = ["dep:tracing-appender", "dep:serde_json"]

[dependencies]
service-daemon-macro = { version = "0.1.0-alpha.1", path = "../service-daemon-macro" }
tokio = { version = "1.43", features = ["full", "tracing"] }
tokio-cron-scheduler = { version = "0.15", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
linkme = "0.3"
uuid = { version = "1.12", features = ["v7"], optional = true }
tokio-util = "0.7"
rand = "0.10"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing-appender = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
petgraph = "0.8.3"
