[package]
name = "example-complete"
version = "0.1.0"
edition = "2024"
publish = false
description = "Complete example: full lifecycle management with state(), shelve/unshelve, and priority waves."

[dependencies]
service-daemon = { path = "../../service-daemon", features = [
    "cron",
] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
