[package]
name = "example-memory-analysis"
version = "0.1.0"
edition = "2024"
publish = false
description = "Memory overhead analysis: measures per-service RSS delta and struct sizes."

[dependencies]
service-daemon = { path = "../../service-daemon", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
paste = "1.0"
libc = "0.2"
tokio-util = "0.7"
dashmap = "6"
futures = "0.3"
