[package]
name = "examples-scheduling"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
service-daemon = { path = "../../service-daemon" }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
