[package]
name = "example-triggers"
version = "0.1.0"
edition = "2024"
publish = false
description = "Triggers example: demonstrates all trigger types (Cron, Queue, Signal, Watch) as decoupled, optional components."

[dependencies]
service-daemon = { path = "../../service-daemon", features = [
    "macros",
    "cron",
    "uuid-trigger-ids",
] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
